tests/data/midterm/midterm/2018084/Q6/submission_1/.vocStudentSubmissionReport.txt

[Executed at: Wed Mar 14 1:49:33 PDT 2018]

Traceback (most recent call last):
  File "/home/ccc_v1_c79523__48809/asn24778_45/asn24782_4/asnlib/submission.py", line 8, in <module>
    from q6_work import find_path
  File "./q6_work.py", line 5
    d={'EastWestLine (EW):}
                          ^
SyntaxError: EOL while scanning string literal
Command exited with non-zero status 1
